One-hot encode categorical variables

--- a/final-edit.ipynb
+++ b/final-edit.ipynb
@@ -1008,11 +1008,11 @@
         "print(f\"Data shape after removing outliers: {df_no_outliers.shape}\")"
       ],
       "metadata": {
-        "id": "w-5wkErc_d2J",
-        "outputId": "df1d913e-6f93-4303-a1ff-71aee9b1bef4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "w-5wkErc_d2J",
+        "outputId": "df1d913e-6f93-4303-a1ff-71aee9b1bef4"
       },
       "id": "w-5wkErc_d2J",
       "execution_count": 75,
@@ -1068,7 +1068,7 @@
       "cell_type": "code",
       "source": [
         "# The target variable pincp is skewed and has negative and zero values, so we will apply a Yeo-Johnson transformation\n",
-        "df_no_outliers['PINCP_yeojohnson'], lambda_ = yeojohnson(df_no_outliers['PINCP'])\n",
+        "df_no_outliers.loc[:, 'PINCP_yeojohnson'], lambda_ = yeojohnson(df_no_outliers['PINCP'])\n",
         "\n",
         "print(\"Lambda:\", lambda_)"
       ],
@@ -1077,28 +1077,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "k3CmmCTQ2uhf",
-        "outputId": "5914d00f-f6af-42e5-8ee3-7a177caf6caa"
+        "outputId": "33665023-956c-4597-a59d-21525f520890"
       },
       "id": "k3CmmCTQ2uhf",
-      "execution_count": 76,
+      "execution_count": 78,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Lambda: 0.8252490550905838\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/tmp/ipython-input-4162715374.py:2: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  df_no_outliers['PINCP_yeojohnson'], lambda_ = yeojohnson(df_no_outliers['PINCP'])\n"
           ]
         }
       ]
@@ -1119,10 +1107,10 @@
           "height": 545
         },
         "id": "q_PLwBG_8_CS",
-        "outputId": "82d35143-b38a-47a4-a2ee-2760fdef65ef"
+        "outputId": "0df99447-f354-4ca2-b34f-7f15432762d5"
       },
       "id": "q_PLwBG_8_CS",
-      "execution_count": 73,
+      "execution_count": 79,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1138,11 +1126,21 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# One-hot encode categorical columns\n",
+        "# Get the list of columns that are NOT numeric\n",
+        "non_num_cols = df3.columns.difference(df_num.columns)\n",
+        "\n",
+        "# One-hot encode all non-numeric columns\n",
+        "df3_encoded = pd.get_dummies(df3, columns=non_num_cols, drop_first=False)\n",
+        "\n",
+        "print(\"Original shape:\", df3.shape)\n",
+        "print(\"Encoded shape:\", df3_encoded.shape)\n"
+      ],
       "metadata": {
-        "id": "aeM97_pM_ZZI"
+        "id": "E5izzgdZCn2e"
       },
-      "id": "aeM97_pM_ZZI",
+      "id": "E5izzgdZCn2e",
       "execution_count": null,
       "outputs": []
     },
@@ -1459,6 +1457,28 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create training and test data sets\n",
+        "# X = features, y = target\n",
+        "X = df.drop(columns=['PINCP'])  # features\n",
+        "y = df['PINCP']                # target\n",
+        "\n",
+        "# Create training and test sets (80% train, 20% test)\n",
+        "X_train, X_test, y_train, y_test = train_test_split(\n",
+        "    X, y,\n",
+        "    test_size=0.2,      # 20% test\n",
+        "    random_state=42     # reproducibility\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "G1SJul8yBJAS"
+      },
+      "id": "G1SJul8yBJAS",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
