Re-run one-hot encode

--- a/final-edit.ipynb
+++ b/final-edit.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 2,
       "id": "45fe0020-62b8-4b59-a26b-762c409d7b29",
       "metadata": {
         "id": "45fe0020-62b8-4b59-a26b-762c409d7b29"
@@ -35,32 +35,32 @@
       "cell_type": "code",
       "source": [
         "# Download data folder from GitHub\n",
-        "!wget --no-cache --output-document=psam_p06.csv https://raw.githubusercontent.com/vxdao01/504/modeling/csv_pca/psam_p06.csv"
+        "#!wget --no-cache --output-document=psam_p06.csv https://raw.githubusercontent.com/vxdao01/504/modeling/csv_pca/psam_p06.csv"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "2QfXXG3EDm8t",
-        "outputId": "8b2a7674-5cf7-4840-b254-ffd4f8e4c3a7"
+        "outputId": "83747dd7-45ed-4e6f-df15-ea84efe9aeab"
       },
       "id": "2QfXXG3EDm8t",
-      "execution_count": 22,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2025-08-10 06:13:28--  https://raw.githubusercontent.com/vxdao01/504/modeling/csv_pca/psam_p06.csv\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.110.133, 185.199.109.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "--2025-08-10 08:19:28--  https://raw.githubusercontent.com/vxdao01/504/modeling/csv_pca/psam_p06.csv\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.111.133, 185.199.108.133, 185.199.109.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.111.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 134 [text/plain]\n",
             "Saving to: ‘psam_p06.csv’\n",
             "\n",
             "\rpsam_p06.csv          0%[                    ]       0  --.-KB/s               \rpsam_p06.csv        100%[===================>]     134  --.-KB/s    in 0s      \n",
             "\n",
-            "2025-08-10 06:13:28 (11.2 MB/s) - ‘psam_p06.csv’ saved [134/134]\n",
+            "2025-08-10 08:19:29 (3.21 MB/s) - ‘psam_p06.csv’ saved [134/134]\n",
             "\n"
           ]
         }
@@ -115,10 +115,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Uz6lJV7VpK9L",
-        "outputId": "d598b306-53e1-4b02-96b0-d250e74d2362"
+        "outputId": "0627daf3-3acf-4db8-e11e-6bc64583a060"
       },
       "id": "Uz6lJV7VpK9L",
-      "execution_count": 29,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -146,17 +146,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "05clyzHYq792",
-        "outputId": "8047faa2-b238-4155-cf17-f4f793f83ff4"
+        "outputId": "b416a45a-f17d-454b-e1f0-6e8b7c0b805a"
       },
       "id": "05clyzHYq792",
-      "execution_count": 32,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Branch 'modeling' set up to track remote branch 'modeling' from 'origin'.\n",
-            "Switched to a new branch 'modeling'\n"
+            "Already on 'modeling'\n",
+            "Your branch is up to date with 'origin/modeling'.\n"
           ]
         }
       ]
@@ -352,7 +352,7 @@
         "id": "LXp-4ldxeFnS"
       },
       "id": "LXp-4ldxeFnS",
-      "execution_count": 34,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -365,10 +365,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "v53o0HqJnozJ",
-        "outputId": "2aab12bd-ea54-4d08-de3c-f9168e6296f3"
+        "outputId": "264e5acf-2c32-4a18-8bc1-aee3b63eaa0f"
       },
       "id": "v53o0HqJnozJ",
-      "execution_count": 36,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -411,10 +411,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MAxf9V98tlrC",
-        "outputId": "84ca3b0f-6ab5-45f5-b6c0-02dc7aa944dc"
+        "outputId": "2ac9ed42-f7d3-41d0-ddc7-9aa878ed8607"
       },
       "id": "MAxf9V98tlrC",
-      "execution_count": 42,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -463,7 +463,7 @@
         "id": "AawoEPFSr3qo"
       },
       "id": "AawoEPFSr3qo",
-      "execution_count": 53,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -476,7 +476,7 @@
         "id": "zph5ahZMufo5"
       },
       "id": "zph5ahZMufo5",
-      "execution_count": 54,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -495,10 +495,10 @@
           "height": 300
         },
         "id": "cbpvjACYx9Wo",
-        "outputId": "9a3dfa0f-0f06-48ab-a481-4398336a746f"
+        "outputId": "ba986d3d-3ebc-42ee-8fc4-55ecea04cc49"
       },
       "id": "cbpvjACYx9Wo",
-      "execution_count": 57,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -526,7 +526,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a010a0ee-0925-4f09-82e4-0ee90aa4206f\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-b9f0b8e0-8af7-4945-8614-ec44fef690b4\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -632,7 +632,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a010a0ee-0925-4f09-82e4-0ee90aa4206f')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b9f0b8e0-8af7-4945-8614-ec44fef690b4')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -684,12 +684,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-a010a0ee-0925-4f09-82e4-0ee90aa4206f button.colab-df-convert');\n",
+              "        document.querySelector('#df-b9f0b8e0-8af7-4945-8614-ec44fef690b4 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-a010a0ee-0925-4f09-82e4-0ee90aa4206f');\n",
+              "        const element = document.querySelector('#df-b9f0b8e0-8af7-4945-8614-ec44fef690b4');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -709,8 +709,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-359a95fd-603f-40ed-ac54-d4859ef698c6\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-359a95fd-603f-40ed-ac54-d4859ef698c6')\"\n",
+              "    <div id=\"df-ff3d179e-1733-4e34-b268-0b362faaa50c\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-ff3d179e-1733-4e34-b268-0b362faaa50c')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -829,7 +829,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-359a95fd-603f-40ed-ac54-d4859ef698c6 button');\n",
+              "            document.querySelector('#df-ff3d179e-1733-4e34-b268-0b362faaa50c button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -864,10 +864,10 @@
           "height": 545
         },
         "id": "55MC2v6s0OpB",
-        "outputId": "031b6669-0b83-4f3c-acc6-b04b5b1b054e"
+        "outputId": "3f29ed09-a099-4ca9-e4d2-6259630145ea"
       },
       "id": "55MC2v6s0OpB",
-      "execution_count": 59,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "display_data",
@@ -893,10 +893,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ANZgChPE0ptx",
-        "outputId": "ee8fcfb6-483c-4247-89b5-9f8834d135a3"
+        "outputId": "9659ab81-d236-403d-fae8-dad8cf731583"
       },
       "id": "ANZgChPE0ptx",
-      "execution_count": 60,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -956,10 +956,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dKCAm6fb3Mnt",
-        "outputId": "8a3b494f-050a-4933-a2ab-97dfad072299"
+        "outputId": "d7d8d274-d326-4e01-e68d-674ca4be62b1"
       },
       "id": "dKCAm6fb3Mnt",
-      "execution_count": 68,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -989,7 +989,7 @@
         "id": "UH8KQIO16tWQ"
       },
       "id": "UH8KQIO16tWQ",
-      "execution_count": 69,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -1012,18 +1012,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "w-5wkErc_d2J",
-        "outputId": "df1d913e-6f93-4303-a1ff-71aee9b1bef4"
+        "outputId": "a59f26cf-0caa-418a-b911-ad5a7bf3f9f5"
       },
       "id": "w-5wkErc_d2J",
-      "execution_count": 75,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Number of outliers detected: 22197\n",
-            "Data shape before removing outliers: (392318, 28)\n",
-            "Data shape after removing outliers: (370121, 28)\n"
+            "Data shape before removing outliers: (392318, 27)\n",
+            "Data shape after removing outliers: (370121, 27)\n"
           ]
         }
       ]
@@ -1047,10 +1047,10 @@
           "height": 545
         },
         "id": "G3H2ytcQ09tM",
-        "outputId": "b777f36d-88c6-4e97-8005-d8132b228309"
+        "outputId": "ae9947e7-d79c-4986-e0aa-026e625bf4e7"
       },
       "id": "G3H2ytcQ09tM",
-      "execution_count": 63,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1077,16 +1077,28 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "k3CmmCTQ2uhf",
-        "outputId": "33665023-956c-4597-a59d-21525f520890"
+        "outputId": "f7215dd4-2dac-433c-e38e-235366aaa1f3"
       },
       "id": "k3CmmCTQ2uhf",
-      "execution_count": 78,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Lambda: 0.8252490550905838\n"
+            "Lambda: 0.8246302746527069\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/tmp/ipython-input-1024974280.py:2: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  df_no_outliers.loc[:, 'PINCP_yeojohnson'], lambda_ = yeojohnson(df_no_outliers['PINCP'])\n"
           ]
         }
       ]
@@ -1107,10 +1119,10 @@
           "height": 545
         },
         "id": "q_PLwBG_8_CS",
-        "outputId": "0df99447-f354-4ca2-b34f-7f15432762d5"
+        "outputId": "97beae39-cf17-4d7b-86b8-974b3ff16b6d"
       },
       "id": "q_PLwBG_8_CS",
-      "execution_count": 79,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1138,11 +1150,24 @@
         "print(\"Encoded shape:\", df3_encoded.shape)\n"
       ],
       "metadata": {
-        "id": "E5izzgdZCn2e"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "E5izzgdZCn2e",
+        "outputId": "39526787-4413-4947-efa7-69d9fc7e909b"
       },
       "id": "E5izzgdZCn2e",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Original shape: (392318, 27)\n",
+            "Encoded shape: (392318, 27)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
