Modified predictors to improve ability to one-hot encode

--- a/final-edit.ipynb
+++ b/final-edit.ipynb
@@ -433,28 +433,18 @@
         "    'AGEP',\n",
         "'SEX',\n",
         "'RAC1P',\n",
-        "'RAC2P',\n",
-        "'RAC3P',\n",
         "'HISP',\n",
-        "'STATE',\n",
         "'PINCP',\n",
         "'SCHL',\n",
         "'CIT',\n",
         "'NATIVITY',\n",
         "'YOEP',\n",
-        "'PUMA',\n",
-        "'PWGTP',\n",
         "'MSP',\n",
         "'ESR',\n",
         "'MAR',\n",
-        "'MSP',\n",
-        "'ESR',\n",
         "'OCCP',\n",
         "'INDP',\n",
         "'WKHP',\n",
-        "'WAGP',\n",
-        "'SEMP',\n",
-        "'YOEP',\n",
         "'DIS',\n",
         "'REGION',\n",
         "    ]"
@@ -1150,11 +1140,28 @@
         "print(\"Encoded shape:\", df_no_outliers.shape)\n"
       ],
       "metadata": {
-        "id": "E5izzgdZCn2e"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 211
+        },
+        "id": "E5izzgdZCn2e",
+        "outputId": "c0c1c9ac-6d4e-40e9-e89c-476bc315ee1f"
       },
       "id": "E5izzgdZCn2e",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'df_no_outliers' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-1307054809.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# One-hot encode categorical columns\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# Get the list of columns that are NOT numeric\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mnon_num_cols\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf_no_outliers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdifference\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf_num\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# One-hot encode all non-numeric columns\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'df_no_outliers' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
