Add new code to one-hot encode predictors one at a time.

--- a/final-edit.ipynb
+++ b/final-edit.ipynb
@@ -1086,18 +1086,40 @@
         "# Get the list of columns that are NOT numeric\n",
         "non_num_cols = df_no_outliers.columns.difference(df_num.columns)\n",
         "\n",
-        "# One-hot encode all non-numeric columns\n",
-        "df3_no_outliers_encoded = pd.get_dummies(df_no_outliers, columns=non_num_cols, drop_first=False)\n",
+        "for col in non_num_cols:\n",
+        "    print(f\"Encoding {col} ...\")\n",
         "\n",
-        "print(\"Original shape:\", df_no_outliers.shape)\n",
-        "print(\"Encoded shape:\", df_no_outliers.shape)\n"
+        "    # Generate dummies for ONE column\n",
+        "    dummies = pd.get_dummies(df_encoded[col], prefix=col, dtype=np.uint8)\n",
+        "\n",
+        "    # Drop original column and join dummies\n",
+        "    df_encoded = pd.concat([df_encoded.drop(columns=[col]), dummies], axis=1)\n",
+        "\n",
+        "print(\"Final encoded shape:\", df_encoded.shape)\n"
       ],
       "metadata": {
-        "id": "E5izzgdZCn2e"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 211
+        },
+        "id": "E5izzgdZCn2e",
+        "outputId": "414918b6-01dd-4d48-b855-13cafc4cf80d"
       },
       "id": "E5izzgdZCn2e",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'df_no_outliers' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-1358376623.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# One-hot encode categorical columns\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# Get the list of columns that are NOT numeric\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mnon_num_cols\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf_no_outliers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdifference\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf_num\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mcol\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mnon_num_cols\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'df_no_outliers' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
